# rules_golang_template

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  render.bzl  rules.bzl
examples/: BUILD.bazel  jsondata.json  sample.tmpl.txt  script.txt  test-file-data-output.sh
render/: BUILD.bazel  env-test.tpl  file.json  render.go  render_test.go  test-env.tpl  test.json  test.tpl  test.txt
