load('//:render.bzl','render')

bazel_build_variable="a variable"

render(
    name="literal-data-output",
    template="sample.tmpl.txt",
    literal_values={
        "sweaters": "15",
        "build_variable" : bazel_build_variable,
        "list" : "one",
    },
)

render(
    name="file-data-output",
    template="sample.tmpl.txt",
    
    # Explicitly set map values from bazel context variables
    literal_values={
        "sweaters": "15",
        "build_variable" : bazel_build_variable,
        "list" : "one",
    },
    
    # Set the value of "script" to the contents of the file "script.txt"
    file_data_values = {
        "script" : ":script.txt"
    },

    # Set the value of "jsondata" to the json object parsed from the contents of jsondata.json 
    json_data_values = {
        "jsondata" : ":jsondata.json"
    }
)

sh_test(
    name = "test-file-data-output",
    size = "small",
    srcs = ["test-file-data-output.sh"],
    args = ["$(location //examples:file-data-output.out)"],
    data = [":file-data-output.out"]
)
